--- a/index.html
+++ b/index.html
@@ -30,165 +30,183 @@
     <script src="components/footer-component.js" defer></script>
 </head>
 
-<body class="grid">
+<body>
     <div class="hero">
         <div class="text-center">
             <h1 class="title">Mosaic Labs</h1>
             <div class="subtitle">Building interfaces for AI-assisted collaboration and deliberation</div>
         </div>
     </div>
-    <div class="margin-16px max-width-700">
-        <div>
-            <p>
-                Mosaic is a non-profit R&D lab working to <b>help groups coordinate, reason effectively, and resolve
-                    conflict</b>.
-                We are building interfaces which support new kinds of collaborative discussions, promote overlooked
-                perspectives,
-                and encourage nuanced exploration of conflicting viewpoints.
-            </p>
-            <p>
-                Rapid developments in AI are quickly transforming the future of reasoning, communication, and conflict.
-                Our goal is to <b>ambitiously apply AI to collective deliberation problems</b>, explore the frontier of
-                human-machine collaboration, and to keep human reasoning at the center of important decision making.
-            </p>
-        </div>
-        <div class="sections" id="accordion">
-            <details>
-                <summary>Differential Development</summary>
-                <div class="details-content">
-                    <p>
-                        Technological progress does not guarantee we use new technology responsibly, nor that we manage
-                        to achieve cooperative and mutually beneficial outcomes.
-                    </p>
-                    <p>
-                        To safely navigate our future, we need systems which directly enable coordination, empower human
-                        groups to think clearly, and prevent disastrous conflicts. <b>The order we develop technology
-                            matters</b>.
-                        By accelerating work which uses recent advances in AI capabilities to enable better collective
-                        reasoning and coordination, we aim to give people the ability to navigate an uncertain future.
-                    </p>
-                </div>
-            </details>
-            <details>
-                <summary>Human-centered Design</summary>
-                <div class="details-content">
-                    <p>
-                        AI systems are improving rapidly. For this reason, it is important that work to augment human
-                        reasoning
-                        <b>improves alongside AI capability advancements</b>, and is not replaced or made obsolete by
-                        them.
-                    </p>
-                    <p>
-                        We are especially concerned about the impulse to outsource reasoning to AI systems, and to
-                        <b>fully replace humans in the
-                            deliberation process</b>. In order to keep humans at the center, we are working
-                        to develop and demonstrate methods for using AI mediation to support and enhance human-lead
-                        discussions.
-                    </p>
-                </div>
-            </details>
-            <details>
-                <summary>Code as a Catalyst</summary>
-                <div class="details-content">
-                    <p>
-                        By testing and demonstrating new methods for AI-assisted deliberation, we aim to help <b>support
-                            a movement</b> directed toward
-                        improving human reasoning, large scale collaboration, and coordinated action.
-                    </p>
-                    <p>
-                        We believe software tools can serve as a catalyst for social change by both demonstrating what
-                        is
-                        possible, as well as <b>becoming a part of the language we use to imagine the future</b>. Our
-                        goal is to
-                        advance the discussion about AI's role in society by building software which concretely embodies
-                        our ideas.
-                    </p>
-                </div>
-            </details>
-        </div>
-        <div>
-            <h2>Projects</h2>
-            <div style="margin: calc(var(--spacing-unit) * 4) 0">
-                <div style="margin: calc(var(--spacing-unit) * 4) 0">
-                    <h3 style="margin-bottom: 6px">
-                        <a href="https://nexus-tool.com">Nexus</a>: AI-mediated deliberation
-                    </h3>
-                    <p style="color: var(--text-light); font-size: 1.0rem; margin-top: 6px">
-                        Built with support from
-                        <a href="https://lightspeedgrants.org/">Lightspeed Grants</a>
-                    </p>
-                    <p>
-                        Nexus is a work-in-progress, experimental platform for AI-mediated group deliberation. It
-                        uses
-                        large language models to help groups understand each other better and surface insights and
-                        solutions
-                        that wouldn't have been found otherwise.
-                    </p>
-                </div>
-                <div style="margin: calc(var(--spacing-unit) * 4) 0">
-                    <h3 style="margin-bottom: 6px">
-                        <a href="https://pantheon.chat">Pantheon</a>: AI-facilitated metacognition
-                    </h3>
-                    <p style="color: var(--text-light); font-size: 1.0rem; margin-top: 6px">
-                        Built with support from the
-                        <a href="https://funds.effectivealtruism.org/funds/far-future">Long-Term Future Fund</a>
-                    </p>
-                    <p>
-                        Pantheon is an experimental AI-facilitated metacognition tool and research prototype exploring
-                        new
-                        ways to use LLMs to improve human thinking. Intricate, customizable AI characters and a novel,
-                        tree-like UI structure empower the user to think and work in new ways.
-                    </p>
-                </div>
+    <div class="content">
+        <main>
+            <div>
+                <p>
+                    Mosaic is a non-profit R&D lab working to <b>help groups coordinate, reason effectively, and resolve
+                        conflict</b>.
+                    We are building interfaces which support new kinds of collaborative discussions, promote overlooked
+                    perspectives,
+                    and encourage nuanced exploration of conflicting viewpoints.
+                </p>
+                <p>
+                    Rapid developments in AI are quickly transforming the future of reasoning, communication, and
+                    conflict.
+                    Our goal is to <b>ambitiously apply AI to collective deliberation problems</b>, explore the frontier
+                    of
+                    human-machine collaboration, and to keep human reasoning at the center of important decision making.
+                </p>
             </div>
-        </div>
-        <hr>
-        <div>
-            <h2>Team</h2>
-            <div class="flex-horizontal wrap">
-                <div class="team-member flex-horizontal">
-                    <img src="images/niki.jpeg" alt="Nicholas Dupuis" class="team-member-image">
-                    <div class="flex-vertical">
-                        <a style="display: block; margin: 8px; font-size: 1.1rem;"
-                            href="https://www.lesswrong.com/users/nicholaskees">Nicholas
-                            Dupuis</a>
-                        <div style="font-size: 0.8rem; color: var(--text-light); margin-left: 8px;">
-                            <div>Co-founder</div>
-                            <div>Research Lead</div>
-                        </div>
+            <div class="sections" id="accordion">
+                <details>
+                    <summary>Differential Development</summary>
+                    <div class="details-content">
+                        <p>
+                            Technological progress does not guarantee we use new technology responsibly, nor that we
+                            manage
+                            to achieve cooperative and mutually beneficial outcomes.
+                        </p>
+                        <p>
+                            To safely navigate our future, we need systems which directly enable coordination, empower
+                            human
+                            groups to think clearly, and prevent disastrous conflicts. <b>The order we develop
+                                technology
+                                matters</b>.
+                            By accelerating work which uses recent advances in AI capabilities to enable better
+                            collective
+                            reasoning and coordination, we aim to give people the ability to navigate an uncertain
+                            future.
+                        </p>
                     </div>
-                </div>
-                <div class="team-member flex-horizontal">
-                    <img src="images/sofi.jpeg" alt="Sofia Vanhanen" class="team-member-image">
-                    <div class="flex-vertical">
-                        <a style="display: block; margin: 8px; font-size: 1.1rem;" href="https://sofiavanhanen.fi">Sofia
-                            Vanhanen</a>
-                        <div style="font-size: 0.8rem; color: var(--text-light); margin-left: 8px;">
-                            <div>Co-founder</div>
-                            <div>Technology Lead</div>
-                        </div>
+                </details>
+                <details>
+                    <summary>Human-centered Design</summary>
+                    <div class="details-content">
+                        <p>
+                            AI systems are improving rapidly. For this reason, it is important that work to augment
+                            human
+                            reasoning
+                            <b>improves alongside AI capability advancements</b>, and is not replaced or made obsolete
+                            by
+                            them.
+                        </p>
+                        <p>
+                            We are especially concerned about the impulse to outsource reasoning to AI systems, and to
+                            <b>fully replace humans in the
+                                deliberation process</b>. In order to keep humans at the center, we are working
+                            to develop and demonstrate methods for using AI mediation to support and enhance human-lead
+                            discussions.
+                        </p>
+                    </div>
+                </details>
+                <details>
+                    <summary>Code as a Catalyst</summary>
+                    <div class="details-content">
+                        <p>
+                            By testing and demonstrating new methods for AI-assisted deliberation, we aim to help
+                            <b>support
+                                a movement</b> directed toward
+                            improving human reasoning, large scale collaboration, and coordinated action.
+                        </p>
+                        <p>
+                            We believe software tools can serve as a catalyst for social change by both demonstrating
+                            what
+                            is
+                            possible, as well as <b>becoming a part of the language we use to imagine the future</b>.
+                            Our
+                            goal is to
+                            advance the discussion about AI's role in society by building software which concretely
+                            embodies
+                            our ideas.
+                        </p>
+                    </div>
+                </details>
+            </div>
+            <div>
+                <h2>Projects</h2>
+                <div style="margin: calc(var(--spacing-unit) * 4) 0">
+                    <div style="margin: calc(var(--spacing-unit) * 4) 0">
+                        <h3 style="margin-bottom: 6px">
+                            <a href="https://nexus-tool.com">Nexus</a>: AI-mediated deliberation
+                        </h3>
+                        <p style="color: var(--text-light); font-size: 1.0rem; margin-top: 6px">
+                            Built with support from
+                            <a href="https://lightspeedgrants.org/">Lightspeed Grants</a>
+                        </p>
+                        <p>
+                            Nexus is a work-in-progress, experimental platform for AI-mediated group deliberation. It
+                            uses
+                            large language models to help groups understand each other better and surface insights and
+                            solutions
+                            that wouldn't have been found otherwise.
+                        </p>
+                    </div>
+                    <div style="margin: calc(var(--spacing-unit) * 4) 0">
+                        <h3 style="margin-bottom: 6px">
+                            <a href="https://pantheon.chat">Pantheon</a>: AI-facilitated metacognition
+                        </h3>
+                        <p style="color: var(--text-light); font-size: 1.0rem; margin-top: 6px">
+                            Built with support from the
+                            <a href="https://funds.effectivealtruism.org/funds/far-future">Long-Term Future Fund</a>
+                        </p>
+                        <p>
+                            Pantheon is an experimental AI-facilitated metacognition tool and research prototype
+                            exploring
+                            new
+                            ways to use LLMs to improve human thinking. Intricate, customizable AI characters and a
+                            novel,
+                            tree-like UI structure empower the user to think and work in new ways.
+                        </p>
                     </div>
                 </div>
             </div>
-        </div>
-        <hr>
-        <div class="signup-container">
-            <h3>Stay Updated</h3>
-            <form action="https://buttondown.email/api/emails/embed-subscribe/mosaic-labs" method="post"
-                target="popupwindow" onsubmit="window.open('https://buttondown.email/mosaic-labs', 'popupwindow')">
-                <div class="form-group">
-                    <input type="email" name="email" id="bd-email" placeholder="your@email.com" required>
-                    <input type="submit" value="Subscribe" class="submit-btn">
+            <hr>
+            <div>
+                <h2>Team</h2>
+                <div class="flex-horizontal wrap">
+                    <div class="team-member flex-horizontal">
+                        <img src="images/niki.jpeg" alt="Nicholas Dupuis" class="team-member-image">
+                        <div class="flex-vertical">
+                            <a style="display: block; margin: 8px; font-size: 1.1rem;"
+                                href="https://www.lesswrong.com/users/nicholaskees">Nicholas
+                                Dupuis</a>
+                            <div style="font-size: 0.8rem; color: var(--text-light); margin-left: 8px;">
+                                <div>Co-founder</div>
+                                <div>Research Lead</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-member flex-horizontal">
+                        <img src="images/sofi.jpeg" alt="Sofia Vanhanen" class="team-member-image">
+                        <div class="flex-vertical">
+                            <a style="display: block; margin: 8px; font-size: 1.1rem;"
+                                href="https://sofiavanhanen.fi">Sofia
+                                Vanhanen</a>
+                            <div style="font-size: 0.8rem; color: var(--text-light); margin-left: 8px;">
+                                <div>Co-founder</div>
+                                <div>Technology Lead</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <small class="privacy-notice">
-                    We'll only send occasional updates about our projects.
-                    <br>
-                    Consider also joining our
-                    <a href="https://discord.gg/Ua3eYqsmyn">Discord</a>
-                    for more frequent updates.
-                </small>
-            </form>
-        </div>
+            </div>
+            <hr>
+            <div class="signup-container">
+                <h3>Stay Updated</h3>
+                <form action="https://buttondown.email/api/emails/embed-subscribe/mosaic-labs" method="post"
+                    target="popupwindow" onsubmit="window.open('https://buttondown.email/mosaic-labs', 'popupwindow')">
+                    <div class="form-group">
+                        <input type="email" name="email" id="bd-email" placeholder="your@email.com" required>
+                        <input type="submit" value="Subscribe" class="submit-btn">
+                    </div>
+                    <small class="privacy-notice">
+                        We'll only send occasional updates about our projects.
+                        <br>
+                        Consider also joining our
+                        <a href="https://discord.gg/Ua3eYqsmyn">Discord</a>
+                        for more frequent updates.
+                    </small>
+                </form>
+            </div>
+        </main>
         <hr>
         <footer-component></footer-component>
     </div>
