Newsletter component in blog list

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <script src="components/gtag-component.js" defer></script>
     <script src="components/footer-component.js" defer></script>
+    <script src="components/newsletter-component.js" defer></script>
 </head>
 
 <body>
@@ -189,25 +190,9 @@
                 </div>
             </div>
             <hr>
-            <div class="signup-container">
-                <h3>Stay Updated</h3>
-                <form action="https://buttondown.email/api/emails/embed-subscribe/mosaic-labs" method="post"
-                    target="popupwindow" onsubmit="window.open('https://buttondown.email/mosaic-labs', 'popupwindow')">
-                    <div class="form-group">
-                        <input type="email" name="email" id="bd-email" placeholder="your@email.com" required>
-                        <input type="submit" value="Subscribe" class="submit-btn">
-                    </div>
-                    <small class="privacy-notice">
-                        We'll only send occasional updates about our projects.
-                        <br>
-                        Consider also joining our
-                        <a href="https://discord.gg/Ua3eYqsmyn">Discord</a>
-                        for more frequent updates.
-                    </small>
-                </form>
-            </div>
+            <newsletter-component></newsletter-component>
+            <hr>
         </main>
-        <hr>
         <footer-component></footer-component>
     </div>
 </body>
