--- a/index.html
+++ b/index.html
@@ -229,8 +229,7 @@
                                 href="https://www.lesswrong.com/users/nicholaskees">Nicholas
                                 Dupuis</a>
                             <div style="font-size: 0.8rem; color: var(--text-light); margin-left: 8px;">
-                                <div>Co-founder</div>
-                                <div>Research Lead</div>
+                                <div>Co-founder & CEO</div>
                             </div>
                         </div>
                     </div>
@@ -241,8 +240,7 @@
                                 href="https://sofiavanhanen.fi">Sofia
                                 Vanhanen</a>
                             <div style="font-size: 0.8rem; color: var(--text-light); margin-left: 8px;">
-                                <div>Co-founder</div>
-                                <div>Technology Lead</div>
+                                <div>Co-founder & CTO</div>
                             </div>
                         </div>
                     </div>
